[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = "0.6.4"
base64 = "0.21.0"
image = "0.24.5"
lazy_static = "1.4.0"
lru = "0.9.0"
percent-encoding = "2.2.0"
photon-rs = "0.3.1"
prost = "0.11.6"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "load-shed", "timeout", "limit"] }
tower-http = { version = "0.3.5", features = ["compression-full", "add-extension"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[build-dependencies]
prost-build = "0.11.6"
